@@ -1,5 +1,7 @@
 *SVN*
 
+* Firebird: decimal/numeric support.  #6408 [macrnic]
+
 * make add_order a tad faster. #6567 [Stefan Kaes]
 
 * Find with :include respects scoped :order.  #5850
